# cookiecutter-python-simple

./: .gitignore  Readme.md  cookiecutter.json
{{cookiecutter.__project_slug}}/: .gitignore  Makefile  Readme.md  pyproject.toml
{{cookiecutter.__project_slug}}/tests/unit/: test_app.py
{{cookiecutter.__project_slug}}/{{cookiecutter.package_name}}/: app.py  logs.py  settings.py
